<?xml version="1.0"?>
<package>
  <name>husky_cartographer_navigation</name>
  <version>0.0.1</version>
  <description>Launch files and code for autonomous navigation of the Husky using Google Cartographer</description>
  <author email="abhattacharjee@clearpathrobotics.com">Aditya Bhattacharjee</author>
  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>map_server</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>cartographer_ros</run_depend>

  <export>
  </export>
</package>
