<package format="2">
  <name>husky_cartographer_navigation</name>
  <version>0.0.2</version>
  <description>Launch files and code for autonomous navigation of the Husky using Google Cartographer</description>
  <author email="abhattacharjee@clearpathrobotics.com">Aditya Bhattacharjee</author>
  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>cartographer_ros</exec_depend>
  <exec_depend>husky_navigation</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <test_depend>roslaunch</test_depend>

  <export>
  </export>
</package>
